corrected overflow

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 ::after,
